# nobody

./: .gitignore  Cargo.toml  Makefile  README.md  nobody.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  mcp.rs  profiles.rs
crates/cli/tests/: adversarial.rs  escape.rs
crates/nobody-cli/: Cargo.toml
crates/nobody-cli/src/: main.rs
crates/nobody-cli/tests/: adversarial.rs
crates/nobody-policy/src/: lib.rs
crates/nobody-runtime/: Cargo.toml
crates/nobody-runtime/src/: lib.rs
crates/nobody-sandbox/: Cargo.toml
crates/nobody-sandbox/src/: lib.rs  linux.rs
crates/nobody-trace/: Cargo.toml
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  linux_landlock.rs  linux_netns.rs  macos_sandbox_exec.rs  noop.rs
crates/trace/: Cargo.toml
crates/trace/src/: lib.rs
docs/: Makefile  design.html  examples.md  mcp.md  policy.md  profiles.md  roadmap.md  trace.md
docs/_static/: bizstyle.js  documentation_options.js
docs/design/: conceptual_design.rst  conf.py  index.rst  introduction.rst  preliminaries.rst  supporting_design.rst
docs/design/appendices/: deployment.rst  glossary.rst  policy_schema.rst  roadmap.rst  threat_model.rst
man/: nobody-policy.7  nobody-sandbox.7  nobody-trace.5  nobody.1  nobody.toml.5
src/: lib.rs  main.rs  policy.rs  trace.rs
tests/escape/: bash_child_read.rs  cargo_build_script_read.rs  common.rs  network_egress.rs  npm_script_read.rs  parent_dir_traversal.rs  python_child_read.rs  read_aws_credentials.rs  read_dotenv.rs  read_ssh_key.rs  symlink_to_secret.rs  write_outside_repo.rs
