[workspace]
members = [
    "crates/nobody-cli",
    "crates/nobody-policy",
    "crates/nobody-runtime",
    "crates/nobody-sandbox",
    "crates/nobody-trace",
]
default-members = ["crates/nobody-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
