[package]
name = "nobody-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nobody"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
nobody-policy = { path = "../policy" }
nobody-runtime = { path = "../runtime" }
nobody-trace = { path = "../trace" }

[dev-dependencies]
serde_json.workspace = true
