[package]
name = "nobody-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nobody"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
nobody-policy = { path = "../policy" }
nobody-runtime = { path = "../runtime" }
nobody-sandbox = { path = "../sandbox" }
nobody-trace = { path = "../trace" }
serde_json.workspace = true

[dev-dependencies]
